--- a/app/src/main/res/layout/fragment_b_m_i.xml
+++ b/app/src/main/res/layout/fragment_b_m_i.xml
@@ -4,26 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.BMIFragment"
-    android:padding="8dp">
+    android:paddingHorizontal="@dimen/default_margin"
+    tools:context=".ui.BMIFragment">
+
+    <include
+        android:id="@+id/bmiToolbar"
+        layout="@layout/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!--    ArcProgress-->
     <com.github.lzyzsd.circleprogress.ArcProgress
         android:id="@+id/Arc_Progress"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        app:arc_progress="25"
+        android:layout_marginTop="@dimen/margin_4dp"
         app:arc_bottom_text="BMI"
         app:arc_bottom_text_size="28sp"
         app:arc_finished_color="@color/color_yellow"
-        app:arc_unfinished_color="@color/light_gray"
+        app:arc_progress="25"
         app:arc_stroke_width="20dp"
         app:arc_text_color="@color/black"
-        android:layout_marginTop="@dimen/margin_4dp"
+        app:arc_unfinished_color="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/bmiToolbar" />
 
     <!--TextView Overweight-->
     <TextView
@@ -53,10 +62,10 @@
         android:id="@+id/normalTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_16dp"
         android:text="@string/normal_text"
         android:textColor="@color/text_color"
         android:textSize="@dimen/text_size_16sp"
-        android:layout_marginEnd="@dimen/margin_16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/overweightTV"
         app:layout_constraintEnd_toStartOf="@+id/circleRedIV"
@@ -76,9 +85,9 @@
         android:id="@+id/underWeightTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_16dp"
         android:text="@string/underweight_text"
         android:textColor="@color/text_color"
-        android:layout_marginEnd="@dimen/margin_16dp"
         android:textSize="@dimen/text_size_16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/circleBlueIV"
@@ -100,12 +109,12 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="242dp"
         android:layout_height="56dp"
+        android:layout_marginTop="@dimen/margin_8dp"
         android:hint="Weight"
         app:counterEnabled="true"
         app:counterMaxLength="9"
         app:endIconMode="clear_text"
         app:helperTextEnabled="true"
-        android:layout_marginTop="@dimen/margin_8dp"
         app:layout_constraintBottom_toTopOf="@+id/heightTIL"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/normalTV">
@@ -124,14 +133,14 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="242dp"
         android:layout_height="56dp"
+        android:layout_marginBottom="@dimen/margin_8dp"
         android:hint="Height"
         app:counterEnabled="true"
         app:counterMaxLength="8"
         app:endIconMode="clear_text"
-        android:layout_marginBottom="@dimen/margin_8dp"
-        app:layout_constraintTop_toBottomOf="@id/WeightTIL"
         app:layout_constraintBottom_toTopOf="@+id/calculateBT"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/WeightTIL">
         <!--    TextInputEditText Height-->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/heightTIET"
@@ -156,9 +165,9 @@
             android:id="@+id/menuWeightACTV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:inputType="none"
-            android:text="@string/kg_text"
-            android:layout_weight="1"/>
+            android:text="@string/kg_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--TextInputLayout weight menu-->
@@ -177,21 +186,21 @@
             android:id="@+id/menuHeightACTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:inputType="none"
-            android:text="@string/cm_text"
-            android:layout_weight="1"/>
+            android:text="@string/cm_text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--    Button calculate-->
     <Button
         android:id="@+id/calculateBT"
+        style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.Button.ElevatedButton"
-        android:text="@string/calculate_text"
-        android:textStyle="bold"
-        android:textSize="@dimen/margin_16dp"
         android:layout_marginBottom="@dimen/margin_8dp"
+        android:text="@string/calculate_text"
+        android:textSize="@dimen/margin_16dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -215,8 +224,7 @@
             android:text="@string/result_text"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_16sp"
-            android:textStyle="bold"
-             />
+            android:textStyle="bold" />
         <!--TextView result-->
         <TextView
             android:layout_width="match_parent"
@@ -231,22 +239,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_8dp"
             android:text="@string/tips_text"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/margin_8dp"
-            />
+            android:textStyle="bold" />
         <!--TextView some tips-->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/padding_4dp"
             android:text="@string/tips"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_16sp"
-            android:textStyle="normal"
-            android:padding="@dimen/padding_4dp"
-             />
+            android:textStyle="normal" />
 
     </LinearLayout>
 
