--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -2,13 +2,21 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape
-            android:innerRadiusRatio="2.7"
             android:shape="ring"
-            android:thicknessRatio="10.0"
-            android:useLevel="true">
-
-            <solid android:color="@color/white" />
-
+            android:thicknessRatio="16"
+            android:useLevel="false">
+            <solid android:color="#DDDDDD" />
         </shape>
+    </item>
+    <item>
+        <rotate android:fromDegrees="270"
+            android:toDegrees="270">
+             <shape
+                android:shape="ring"
+                android:thicknessRatio="16"
+                android:useLevel="true">
+                <solid android:color="#FF03DAC5"/>
+            </shape>
+        </rotate>
     </item>
 </layer-list>
