--- a/app/src/main/res/layout/fragment_b_m_i.xml
+++ b/app/src/main/res/layout/fragment_b_m_i.xml
@@ -5,32 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.BMIFragment"
-    android:padding="8dp">
+>
 
     <!--    ArcProgress-->
     <com.github.lzyzsd.circleprogress.ArcProgress
         android:id="@+id/Arc_Progress"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        app:arc_progress="25"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="@dimen/margin_4dp"
         app:arc_bottom_text="BMI"
-        app:arc_bottom_text_size="28sp"
+        app:arc_bottom_text_size="24sp"
         app:arc_finished_color="@color/color_yellow"
-        app:arc_unfinished_color="@color/light_gray"
+        app:arc_progress="18"
         app:arc_stroke_width="20dp"
         app:arc_text_color="@color/black"
-        android:layout_marginTop="@dimen/margin_4dp"
+        app:arc_unfinished_color="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/titleTV" />
 
+    <!--icon back-->
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--text title-->
+    <TextView
+        android:id="@+id/titleTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/bmi_calculator"
+        android:textColor="@color/text_color"
+        android:textSize="@dimen/title_text_view_24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent" />
     <!--TextView Overweight-->
     <TextView
         android:id="@+id/overweightTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginEnd="60dp"
         android:text="@string/overweight_text"
         android:textColor="@color/text_color"
@@ -53,10 +72,10 @@
         android:id="@+id/normalTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_16dp"
         android:text="@string/normal_text"
         android:textColor="@color/text_color"
         android:textSize="@dimen/text_size_16sp"
-        android:layout_marginEnd="@dimen/margin_16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/overweightTV"
         app:layout_constraintEnd_toStartOf="@+id/circleRedIV"
@@ -76,9 +95,9 @@
         android:id="@+id/underWeightTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_16dp"
         android:text="@string/underweight_text"
         android:textColor="@color/text_color"
-        android:layout_marginEnd="@dimen/margin_16dp"
         android:textSize="@dimen/text_size_16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/circleBlueIV"
@@ -100,14 +119,14 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="242dp"
         android:layout_height="56dp"
+        android:layout_marginTop="@dimen/margin_8dp"
         android:hint="Weight"
         app:counterEnabled="true"
         app:counterMaxLength="9"
         app:endIconMode="clear_text"
         app:helperTextEnabled="true"
-        android:layout_marginTop="@dimen/margin_8dp"
         app:layout_constraintBottom_toTopOf="@+id/heightTIL"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
         app:layout_constraintTop_toBottomOf="@+id/normalTV">
         <!--    TextInputEditText weight-->
         <com.google.android.material.textfield.TextInputEditText
@@ -124,14 +143,14 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="242dp"
         android:layout_height="56dp"
+        android:layout_marginBottom="@dimen/margin_8dp"
         android:hint="Height"
         app:counterEnabled="true"
         app:counterMaxLength="8"
         app:endIconMode="clear_text"
-        android:layout_marginBottom="@dimen/margin_8dp"
-        app:layout_constraintTop_toBottomOf="@id/WeightTIL"
         app:layout_constraintBottom_toTopOf="@+id/calculateBT"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+        app:layout_constraintTop_toBottomOf="@id/WeightTIL">
         <!--    TextInputEditText Height-->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/heightTIET"
@@ -146,9 +165,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:layout_marginStart="@dimen/margin_16dp"
+        android:layout_marginStart="@dimen/margin_8dp"
         app:layout_constraintBottom_toBottomOf="@+id/WeightTIL"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintStart_toEndOf="@+id/WeightTIL"
         app:layout_constraintTop_toTopOf="@+id/WeightTIL">
         <!--AutoCompleteTextView weight menu-->
@@ -156,9 +175,9 @@
             android:id="@+id/menuWeightACTV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:inputType="none"
-            android:text="@string/kg_text"
-            android:layout_weight="1"/>
+            android:text="kg" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--TextInputLayout weight menu-->
@@ -167,9 +186,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:layout_marginStart="@dimen/margin_16dp"
+        android:layout_marginStart="@dimen/margin_8dp"
         app:layout_constraintBottom_toBottomOf="@+id/heightTIL"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintStart_toEndOf="@+id/heightTIL"
         app:layout_constraintTop_toTopOf="@+id/heightTIL">
         <!--AutoCompleteTextView height menu-->
@@ -177,37 +196,38 @@
             android:id="@+id/menuHeightACTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:inputType="none"
-            android:text="@string/cm_text"
-            android:layout_weight="1"/>
+            android:text="cm" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--    Button calculate-->
     <Button
         android:id="@+id/calculateBT"
+        style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.Button.ElevatedButton"
         android:text="@string/calculate_text"
-        android:textStyle="bold"
         android:textSize="@dimen/margin_16dp"
-        android:layout_marginBottom="@dimen/margin_8dp"
+        android:textStyle="bold"
+        android:onClick="calculateBTOnClick"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
         app:layout_constraintTop_toBottomOf="@id/heightTIL" />
 
     <!--    LinearLayout part result-->
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="202dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/background_for_bmi_result"
         android:orientation="vertical"
-        android:padding="@dimen/padding_8dp"
+        android:padding="@dimen/margin_4dp"
+        android:layout_margin="@dimen/margin_4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintEnd_toEndOf="@+id/menuHeightTIL"
+        app:layout_constraintStart_toStartOf="@+id/heightTIL">
         <!--TextView result-->
         <TextView
             android:layout_width="wrap_content"
@@ -215,10 +235,10 @@
             android:text="@string/result_text"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_16sp"
-            android:textStyle="bold"
-             />
+            android:textStyle="bold" />
         <!--TextView result-->
         <TextView
+            android:id="@+id/resultTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/text_type_in_result"
@@ -231,23 +251,35 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_4dp"
             android:text="@string/tips_text"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/margin_8dp"
-            />
+            android:textStyle="bold" />
         <!--TextView some tips-->
         <TextView
+            android:id="@+id/tipsTV"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/tips"
             android:textColor="@color/text_color"
-            android:textSize="@dimen/text_size_16sp"
-            android:textStyle="normal"
-            android:padding="@dimen/padding_4dp"
-             />
+            android:textSize="12sp"
+            android:textStyle="normal" />
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="8dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
