--- a/app/src/main/res/layout/meal_item_layout.xml
+++ b/app/src/main/res/layout/meal_item_layout.xml
@@ -6,65 +6,73 @@
     android:layout_marginHorizontal="@dimen/large_margin"
     android:layout_marginVertical="@dimen/small_margin">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/mealItem1Box"
-        android:layout_width="380dp"
-        android:layout_height="80dp"
-        android:background="@color/lightGreenTheme"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/itemRounded"
-        app:strokeColor="@color/mealItemStrokeColor"
-        app:strokeWidth="1dp" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/mealItem1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/item_style"
-        android:padding="21dp"
-        android:text="🥚"
-        android:textColor="@color/primaryBlack"
-        android:textSize="28sp"
-        app:layout_constraintStart_toStartOf="@id/mealItem1Box"
-        app:layout_constraintTop_toTopOf="@id/mealItem1Box" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/mealItem1Box"
+            android:layout_width="380dp"
+            android:layout_height="80dp"
+            android:background="@color/lightGreenTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/itemRounded"
+            app:strokeColor="@color/mealItemStrokeColor"
+            app:strokeWidth="1dp" />
 
-    <TextView
-        android:id="@+id/mealItem1Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:padding="2dp"
-        android:text="Eggs"
-        android:textColor="@color/primaryBlack"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/mealItem1"
-        app:layout_constraintTop_toTopOf="@id/mealItem1Box" />
+        <TextView
+            android:id="@+id/mealItem1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/item_style"
+            android:padding="21dp"
+            android:text="🥚"
+            android:textColor="@color/primaryBlack"
+            android:textSize="28sp"
+            app:layout_constraintStart_toStartOf="@id/mealItem1Box"
+            app:layout_constraintTop_toTopOf="@id/mealItem1Box" />
 
-    <TextView
-        android:id="@+id/mealItem1Calories"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:padding="2dp"
-        android:text="200 cal"
-        android:textColor="@color/primaryBlack"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@id/mealItem1Name"
-        app:layout_constraintTop_toTopOf="@id/mealItem1Name" />
+        <TextView
+            android:id="@+id/mealItem1Name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-medium"
+            android:padding="2dp"
+            android:text="Eggs"
+            android:textColor="@color/primaryBlack"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@id/mealItem1"
+            app:layout_constraintTop_toTopOf="@id/mealItem1Box" />
 
-    <Button
-        android:id="@+id/btnDeleteItem1"
-        android:layout_width="25dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/ic_baseline_delete_24"
-        app:layout_constraintEnd_toEndOf="@id/mealItem1Box"
-        app:layout_constraintTop_toTopOf="@id/mealItem1Name" />
+        <TextView
+            android:id="@+id/mealItem1Calories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:padding="2dp"
+            android:text="200 cal"
+            android:textColor="@color/primaryBlack"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@id/mealItem1Name"
+            app:layout_constraintTop_toTopOf="@id/mealItem1Name" />
 
-
+        <Button
+            android:id="@+id/btnDeleteItem1"
+            android:layout_width="25dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/ic_baseline_delete_24"
+            app:layout_constraintEnd_toEndOf="@id/mealItem1Box"
+            app:layout_constraintTop_toTopOf="@id/mealItem1Name" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
